Fixed a UI layout bug in the top bar.

--- a/app/component/navigation.scss
+++ b/app/component/navigation.scss
@@ -1,6 +1,5 @@
-
 /* foundation override */
-$menu-slide: "transform 200ms ease";
+$menu-slide: 'transform 200ms ease';
 $offcanvas-background: #333333;
 $offcanvas-background-hover: scale-color($gray, $lightness: -30%);
 $offcanvas-background-active: scale-color($gray, $lightness: -30%);
@@ -29,7 +28,6 @@ $offcanvas-link-text-font-size: 15px;
 
 /* Content */
 $content-background-color: $background-color;
-
 
 .top-bar {
   position: relative;
@@ -106,7 +104,7 @@ $content-background-color: $background-color;
 }
 
 .flex-horizontal {
-  display:flex;
+  display: flex;
   flex-direction: row;
 }
 
@@ -129,17 +127,18 @@ $content-background-color: $background-color;
   }
 }
 
-.navi-languages { //desktop
-  #lang-select{
+.navi-languages {
+  //desktop
+  #lang-select {
     border-bottom: 0px;
     .lang.selected {
-        background: rgba(0, 0, 0, 0.15);
+      background: rgba(0, 0, 0, 0.15);
     }
   }
 }
 
 .right-border {
-  border-right: 1px solid rgba(0,0,0,0.15);
+  border-right: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .navi-icons {
@@ -148,13 +147,15 @@ $content-background-color: $background-color;
     color: $primary-color;
     fill: $top-navigation-icon-color;
   }
-  width:50px;
+  width: 50px;
 }
 .main-menu-toggle {
   .icon {
     font-size: $font-size-large;
   }
 
+  align-items: center;
+  display: flex;
   right: 0;
 }
 
@@ -168,7 +169,7 @@ $content-background-color: $background-color;
   padding: 0;
   background: $black;
   color: $offcanvas-link-color;
-  height:100%;
+  height: 100%;
   overflow-y: auto;
   text-align: left;
   @include font-medium;
@@ -187,7 +188,7 @@ $content-background-color: $background-color;
     color: $offcanvas-link-color;
     text-decoration: none;
   }
-  .icon{
+  .icon {
     fill: $offcanvas-link-color;
     &.small {
       width: 10px;
@@ -215,7 +216,7 @@ $content-background-color: $background-color;
   padding: 0.5em $padding-large;
   .footer-item {
     margin: 0px;
-    display:inline-block;
+    display: inline-block;
     font-size: $font-size-normal;
     button {
       font-size: $font-size-normal;
@@ -280,16 +281,15 @@ section.content {
 
 @media print {
   section.content {
-     height: auto;
-     display: block;
+    height: auto;
+    display: block;
 
-     .desktop {
-       height: auto;
-       display: block;
-     }
-   }
+    .desktop {
+      height: auto;
+      display: block;
+    }
+  }
 }
-
 
 .content.bp-large {
   height: calc(100% - 100px);
@@ -330,8 +330,8 @@ section.content {
   @media print {
     display: none;
   }
-  position:relative;
-  z-index:802;
+  position: relative;
+  z-index: 802;
   width: 100%;
   display: block;
   @include font-book;
@@ -351,7 +351,7 @@ section.content {
   }
 
   span {
-    width:45px;
+    width: 45px;
   }
 
   h2 {
@@ -375,12 +375,12 @@ section.content {
 
 #close-message-bar {
   span {
-      padding-right:10px;
-      padding-top:10px;
+    padding-right: 10px;
+    padding-top: 10px;
   }
 }
 .message-bar-fade {
-  mask-image: linear-gradient(rgba(0,0,0,1) 80px, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 80px, rgba(0, 0, 0, 0));
 }
 // Need more specific selector to override
 .message-bar .icon {
@@ -425,7 +425,7 @@ section.content {
   font-size: 18px;
   margin: 0px;
   padding: 0px 6px;
-  border: 1px solid rgba(0,0,0,0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
   a.external-link {
